--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -17,31 +17,31 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.3
   fluttertoast: ^8.2.1
-  rive: ^0.9.1
+  rive: ^0.10.4
 
-  firebase_storage: ^10.0.1
-  cloud_firestore: ^3.1.10
-  firebase_dynamic_links: ^4.3.1
+  firebase_storage: ^11.1.2
+  cloud_firestore: ^4.6.0
+  firebase_dynamic_links: ^5.2.0
 
   shared_preferences: ^2.0.6
   image_picker: ^0.8.2
   url_launcher: ^6.0.9
   open_file: ^3.1.0
-  permission_handler: ^9.2.0
+  permission_handler: ^10.2.0
   share_plus: ^4.0.1
   timer_count_down: ^2.2.1
   flutter_vibrate: ^1.3.0
   video_player: ^2.3.0
-  speech_to_text: ^5.4.3
+  speech_to_text: ^6.1.1
   avatar_glow: ^2.0.2
-  connectivity_plus: ^2.2.1
+  connectivity_plus: ^3.0.6
   shimmer: ^2.0.0
-  flutter_image_compress: ^1.1.0
+  flutter_image_compress: ^2.0.1
   dotted_line: ^3.1.0
   flutter_animated_dialog: ^2.0.1
   readmore: ^2.1.0
   uuid: ^3.0.6
-  package_info_plus: ^1.4.2
+  package_info_plus: ^3.1.2
   # device_info_plus: ^3.2.3
   device_preview: ^1.1.0
   page_transition: ^2.0.9
@@ -51,6 +51,8 @@ dependencies:
   pin_code_fields: ^7.4.0
   flutter_calendar_carousel: ^2.3.1
   pdf: ^3.1.0
+  flutter_hooks: ^0.18.6
+  hooks_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
