--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   pdf: ^3.1.0
   flutter_hooks: ^0.18.6
   hooks_riverpod: ^2.3.6
+  syncfusion_flutter_pdfviewer: ^21.2.3
 
 dev_dependencies:
   flutter_test:
