--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   uuid: ^3.0.6
   package_info_plus: ^3.1.2
   # device_info_plus: ^3.2.3
-  device_preview: ^1.1.0
+  # device_preview: ^1.1.0
   page_transition: ^2.0.9
   font_awesome_flutter: ^10.2.1
   dotted_border: ^2.0.0+3
